# trackerbots_telemetry

./: .gitignore  README.md
pulse_server/: Cargo.toml  README.md  edison_autostart_installation.md  edison_pulse_server.service
pulse_server/config/: hackrf_config.json  log_config.json
pulse_server/src/: endpoint.rs  gain_control.rs  hackrf_task.rs  main.rs  task.rs  test_task.rs  util.rs
telemetry_host/: Cargo.toml  README.md  simulator instructions.md
telemetry_host/src/: main.rs  mavlink_handler.rs  pulse_handler.rs
